--- a/themes/webtrees/style.css
+++ b/themes/webtrees/style.css
@@ -455,7 +455,6 @@ a:hover .nameZoom {color:#ff0000;font-weight:bold;font-size:14px;}
 .change_old, .namered {color:#000 !important;text-decoration:line-through !important;}
 /* ====== */
 
-.note_details {display:none;}
 a.showit {position:relative;z-index:24;text-decoration:none;}
 a.showit:hover {z-index:25;background-color:#ffff9b;cursor:crosshair;}
 a.showit > span {display:none;}
